<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/txtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:text="@string/password" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton" />

    <EditText
        android:id="@+id/txtHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/host" />

    <EditText
        android:id="@+id/txtPort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/port" />

    <EditText
        android:id="@+id/txtServerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/serverName" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/chkFullAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullAddress" />

        <CheckBox
            android:id="@+id/chkAutoReconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autoReconnect" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:text="@string/hello" />

</LinearLayout>